# Research-Paper---RAG

./: .gitignore  README.md  main.py  pyproject.toml
backend/app/: __init__.py
backend/app/core/: __init__.py
backend/app/rag/: example_usage.py  pipeline.py  requirements.txt
backend/app/rag/config/: settings.py
backend/app/rag/generation/: generator.py
backend/app/rag/ingestion/chunker/: chunker.py
backend/app/rag/ingestion/cleaner/: text_cleaner.py
backend/app/rag/ingestion/embedder/: embedder.py
backend/app/rag/ingestion/parser/: pdf_parser.py
backend/app/rag/retrieval/: hybrid_retriever.py  query_rewriter.py
backend/app/rag/retrieval/reranker/: reranker.py
backend/app/rag/utils/: models.py
backend/app/services/: __init__.py
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ApiKeyInput.css  ApiKeyInput.jsx  ChatSidebar.css  ChatSidebar.jsx  FileUpload.css  FileUpload.jsx  Footer.css  Footer.jsx  ModelSelector.css  ModelSelector.jsx  Navbar.css  Navbar.jsx  NotesPanel.css  NotesPanel.jsx
frontend/src/context/: AuthContext.jsx  SettingsContext.jsx
frontend/src/pages/: Dashboard.css  Dashboard.jsx  Landing.css  Landing.jsx  Login.css  Login.jsx  Signup.jsx
frontend/src/utils/: constants.js
